; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_mxfenc.c_mxf_write_avc_subdesc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_mxfenc.c_mxf_write_avc_subdesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32* }
%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32, i32 }

@mxf_avc_subdescriptor_key = common dso_local global i32 0, align 4
@AVCSubDescriptor = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_8__*, %struct.TYPE_7__*)* @mxf_write_avc_subdesc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mxf_write_avc_subdesc(%struct.TYPE_8__* %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %4, align 8
  %7 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @mxf_avc_subdescriptor_key, align 4
  %12 = call i32 @avio_write(i32* %10, i32 %11, i32 16)
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @klv_encode_ber4_length(i32* %13, i32 0)
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @avio_tell(i32* %15)
  store i32 %16, i32* %6, align 4
  %17 = load i32*, i32** %5, align 8
  %18 = call i32 @mxf_write_local_tag(i32* %17, i32 16, i32 15370)
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @AVCSubDescriptor, align 4
  %21 = call i32 @mxf_write_uuid(i32* %19, i32 %20, i32 0)
  %22 = load i32*, i32** %5, align 8
  %23 = call i32 @mxf_write_local_tag(i32* %22, i32 1, i32 33280)
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @avio_w8(i32* %24, i32 255)
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @mxf_write_local_tag(i32* %26, i32 1, i32 33281)
  %28 = load i32*, i32** %5, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @avio_w8(i32* %28, i32 %33)
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @mxf_write_local_tag(i32* %35, i32 1, i32 33282)
  %37 = load i32*, i32** %5, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %38, i32 0, i32 0
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = call i32 @avio_w8(i32* %37, i32 %42)
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = load i32, i32* %6, align 4
  %48 = call i32 @mxf_update_klv_size(i32* %46, i32 %47)
  ret void
}

declare dso_local i32 @avio_write(i32*, i32, i32) #1

declare dso_local i32 @klv_encode_ber4_length(i32*, i32) #1

declare dso_local i32 @avio_tell(i32*) #1

declare dso_local i32 @mxf_write_local_tag(i32*, i32, i32) #1

declare dso_local i32 @mxf_write_uuid(i32*, i32, i32) #1

declare dso_local i32 @avio_w8(i32*, i32) #1

declare dso_local i32 @mxf_update_klv_size(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
